Incomplete Client Project

--- a/cats.html
+++ b/cats.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cozy Cat</title>
 </head>
 <body>
     <header>
-        <img>
+        <a href="index.html"><img src="Images/Logo.png" alt="cozy cat logo"></a>
         <nav>
             <a href="menu.html">Menu</a>
             <a href="reservations.html">Reservations</a>
@@ -19,6 +20,24 @@
     </header>
     <main>
         <h2>Our Cats</h2>
+        <img src="Images/Raja.png" alt="cat image 1">
+        <h3>Raja</h3>
+        <p>Raja is the regal ruler of the house, with fur as soft as a cloud and eyes like golden sunsets. A mix of daring adventurer and expert napper, he loves perching on high spots, batting at strings, and demanding belly rubs—always on his terms. With a playful spirit and a melt-your-heart purr, Raja is pure feline royalty.</p>
+        <img src="Images/Fluffy.png" alt="cat image 2">
+        <h3>Fluffy</h3>
+        <p>Fluffy is a bundle of pure, cozy charm, with a luxurious coat that looks like it was spun from clouds. Her big, curious eyes gleam with mischief as she investigates every corner of her kingdom. Whether she’s curling up in the sunniest spot or chasing after imaginary prey, Fluffy is the perfect mix of cuddly and playful. One look at her, and it’s easy to see why she’s the heart of the household!</p>
+        <img src="Images/Lucy.png" alt="cat image 3">
+        <h3>Lucy</h3>
+        <p>Lucy is a sleek and sassy feline with a personality as bright as her emerald-green eyes. She’s the queen of her domain, strutting with confidence and a flick of her tail that says she’s in charge. Always curious, Lucy loves perching by the window to watch the world go by or chasing after her favorite toy mouse. Whether she’s demanding attention or curling up for cuddles, Lucy knows how to keep life interesting!</p>
+        <img src="Images/Leo.png" alt="cat image 4">
+        <h3>Leo</h3>
+        <p>Leo is a bold and adventurous cat with a golden coat that matches his lion-hearted spirit. His piercing amber eyes seem to hold the secrets of the universe, though he’s just as likely plotting his next great pounce. Whether he’s scaling furniture like a jungle king or basking in a sunny spot with a contented purr, Leo exudes charm and confidence. He’s the fearless leader of the household—and he knows it!</p>
+        <img src="Images/Molly.png" alt="cat image 5">
+        <h3>Molly</h3>
+        <p>Molly is a sweet and gentle soul with a soft, silken coat and the kindest amber eyes. She loves quiet moments, curling up in cozy corners or napping in sunbeams that perfectly warm her tiny paws. Though she’s shy at first, Molly’s affectionate head nudges and soft purrs reveal her loving nature. She’s the heartwarming companion everyone dreams of having.</p>
+        <img src="Images/Spooky.png" alt="cat image 6">
+        <h3>Spooky</h3>
+        <p>Spooky is a mysterious little shadow, gliding silently through the house with wide, glowing eyes that seem to see everything. With her sleek black coat and playful streak, she’s a mix of elegance and mischief. She loves hiding in unexpected places, leaping out for surprise pounces, and watching the world from the safety of her favorite perch. Spooky’s charm lies in her enchanting mix of curiosity and a touch of magic.</p>
     </main>
     <footer></footer>
 </body>
