--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cozy Cat</title>
 </head>
 <body>
     <header>
-        <img>
+        <a href="index.html"><img src="Images/Logo.png" alt="cozy cat logo"></a>
         <nav>
             <a href="menu.html">Menu</a>
             <a href="reservations.html">Reservations</a>
@@ -18,6 +19,7 @@
         </nav>
     </header>
     <main>
+        <img src="Images/Snuggly Cat.png" alt="cute cat picture">
         <h2>Contact</h2>
         <p>Phone: 651-651-6516</p>
         <p>Email: cozycat@gmail.com</p>
