--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cozy Cat</title>
 </head>
 <body>
     <header>
-        <img>
+        <a href="index.html"><img src="Images/Logo.png" alt="cozy cat logo"></a>
         <nav>
             <a href="menu.html">Menu</a>
             <a href="reservations.html">Reservations</a>
@@ -18,16 +19,17 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="story">
+            <img src="Images/Cute Kitty.png" alt="cute cat picture">
             <h2>Our Story</h2>
             <p>At The Cozy Cat, we believe in the magic of purrs and warm companionship. Nestled in the heart of Stillwater, MN, our cat café offers a welcoming escape where you can sip your favorite coffee or tea while enjoying the playful charm of our friendly feline residents. Each of our cats is a rescue with a unique story, and we’re proud to partner with local shelters to help them find their forever homes. Whether you're here for a cozy moment or to meet your new best friend, The Cozy Cat is the purr-fect place to relax, connect, and unwind.</p>
         </section>
-        <section>
+        <section class="info">
             <h2>Location</h2>
             <p>4321 Address Road<br>Stillwater, MN</p>
             <h2>Hours</h2>
         </section>
-        <section>
+        <section class="humane">
             <h2>Humane Society</h2>
             <p>The Humane Society of Stillwater is a nonprofit, adoption guaranteed animal shelter that serves homeless dogs and cats in the Stillwater community.</p>
         </section>
