--- a/menu.html
+++ b/menu.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cozy Cat</title>
 </head>
 <body>
     <header>
-        <img>
+        <a href="index.html"><img src="Images/Logo.png" alt="cozy cat logo"></a>
         <nav>
             <a href="menu.html">Menu</a>
             <a href="reservations.html">Reservations</a>
@@ -18,9 +19,17 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="featured">
             <h2>Featured</h2>
-        </section>
+            <img src="Images/Classic.png" alt="classic tea">
+            <h3>Classic Milk Tea</h3>
+            <img src="Images/Matcha.png" alt="matcha tea">
+            <h3>Matcha Tea</h3>
+            <img src="Images/Taro.png" alt="taro tea">
+            <h3>Taro Milk Tea</h3>
+            <img src="Images/Fruit.png" alt="fruit tea">
+            <h3>Mango Fruit Tea</h3>
+        </section class=menu>
         <p>Coffee</p>
         <p>Tea</p>
         <p>Pasteries</p>
