--- a/help.html
+++ b/help.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cozy Cat</title>
 </head>
 <body>
     <header>
-        <img>
+        <a href="index.html"><img src="Images/Logo.png" alt="cozy cat logo"></a>
         <nav>
             <a href="menu.html">Menu</a>
             <a href="reservations.html">Reservations</a>
@@ -18,11 +19,11 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="donate">
             <h2>Donate</h2>
             <p>Your generosity helps The Cozy Cat continue to be a safe haven for our furry friends and a warm retreat for our guests. Every donation supports the care, food, and medical needs of our rescue cats, as well as our mission to find them loving forever homes. With your help, we can provide more cozy spaces, enrichment activities, and lifesaving resources for our feline residents. Whether it’s a one-time gift or an ongoing contribution, your support makes a meaningful difference in the lives of cats and the community we serve. Thank you for being part of The Cozy Cat family!</p>
         </section>
-        <section>
+        <section class="volunteer">
             <h3>Volunteer</h3>
             <p>Join The Cozy Cat family as a volunteer and help us create a purr-fect haven for our feline friends! From assisting with daily cat care and socializing our furry residents to welcoming guests and supporting adoption events, there are so many ways to make a difference. Volunteering not only helps our cats thrive but also gives you the chance to be part of a compassionate community that shares your love for animals. Whether you have a few hours a week or just a little extra time to spare, your efforts will leave a lasting paw print on the lives of our cats and visitors alike.</p>
             <h3>Employment Opportunities</h3>
