--- a/reservations.html
+++ b/reservations.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cozy Cat</title>
 </head>
 <body>
     <header>
-        <img>
+        <a href="index.html"><img src="Images/Logo.png" alt="cozy cat logo"></a>
         <nav>
             <a href="menu.html">Menu</a>
             <a href="reservations.html">Reservations</a>
