Incomplete Client Project

--- a/cats.html
+++ b/cats.html
@@ -19,6 +19,7 @@
         </nav>
     </header>
     <main>
+        <section class="cats">
         <h2>Our Cats</h2>
         <img src="Images/Raja.png" alt="cat image 1">
         <h3>Raja</h3>
@@ -38,6 +39,7 @@
         <img src="Images/Spooky.png" alt="cat image 6">
         <h3>Spooky</h3>
         <p>Spooky is a mysterious little shadow, gliding silently through the house with wide, glowing eyes that seem to see everything. With her sleek black coat and playful streak, she’s a mix of elegance and mischief. She loves hiding in unexpected places, leaping out for surprise pounces, and watching the world from the safety of her favorite perch. Spooky’s charm lies in her enchanting mix of curiosity and a touch of magic.</p>
+    </section>
     </main>
     <footer></footer>
 </body>
