--- a/help.html
+++ b/help.html
@@ -26,9 +26,10 @@
         <section class="volunteer">
             <h3>Volunteer</h3>
             <p>Join The Cozy Cat family as a volunteer and help us create a purr-fect haven for our feline friends! From assisting with daily cat care and socializing our furry residents to welcoming guests and supporting adoption events, there are so many ways to make a difference. Volunteering not only helps our cats thrive but also gives you the chance to be part of a compassionate community that shares your love for animals. Whether you have a few hours a week or just a little extra time to spare, your efforts will leave a lasting paw print on the lives of our cats and visitors alike.</p>
-            <h3>Employment Opportunities</h3>
-            <p>Looking for a job that combines your love for cats with a vibrant, community-focused environment? The Cozy Cat is always on the lookout for passionate, friendly individuals to join our team! From managing the café to caring for our feline residents and creating memorable guest experiences, every role is an opportunity to make a difference. If you’re a cat enthusiast with a knack for customer service, we’d love to hear from you. Join us in spreading joy, one paw at a time!</p>
         </section>
+            <section class="employment"><h3>Employment Opportunities</h3>
+            <p>Looking for a job that combines your love for cats with a vibrant, community-focused environment? The Cozy Cat is always on the lookout for passionate, friendly individuals to join our team! From managing the café to caring for our feline residents and creating memorable guest experiences, every role is an opportunity to make a difference. If you’re a cat enthusiast with a knack for customer service, we’d love to hear from you. Join us in spreading joy, one paw at a time!</p></section>
+        
     </main>
     <footer></footer>
 </body>
