Incomplete Client Project

--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,12 @@
     </header>
     <main>
         <img src="Images/Snuggly Cat.png" alt="cute cat picture">
-        <h2>Contact</h2>
+        <section class="contact"><h2>Contact</h2>
         <p>Phone: 651-651-6516</p>
         <p>Email: cozycat@gmail.com</p>
         <h2>Socials</h2>
         <p>Facebook: Cozy Cat Cafe</p>
-        <p>Instagram: @cozycat</p>
+        <p>Instagram: @cozycat</p></section>
     </main>
     <footer></footer>
 </body>
