--- a/reservations.html
+++ b/reservations.html
@@ -19,13 +19,15 @@
         </nav>
     </header>
     <main>
-        <h2>Reservations</h2>
+       <section class="reservations"><h2>Reservations</h2>
+        <img src="Images/Snuggling Kitties.png" alt="Cat image">
         <h3>Cat Lounge</h3>
         <p>Book Now</p>
         <p>Reservations</p>
+        <img src="Images/Party.png" alt="party image">
         <h3>Party Room</h3>
         <p>Book Now</p>
-        <p>Reservations</p>
+        <p>Reservations</p></section>
     </main>
     <footer></footer>
 </body>
