--- a/help.html
+++ b/help.html
@@ -20,6 +20,7 @@
     </header>
     <main>
         <section class="donate">
+            <img src="Images/Cat Image.png" alt="snuggly cat image">
             <h2>Donate</h2>
             <p>Your generosity helps The Cozy Cat continue to be a safe haven for our furry friends and a warm retreat for our guests. Every donation supports the care, food, and medical needs of our rescue cats, as well as our mission to find them loving forever homes. With your help, we can provide more cozy spaces, enrichment activities, and lifesaving resources for our feline residents. Whether it’s a one-time gift or an ongoing contribution, your support makes a meaningful difference in the lives of cats and the community we serve. Thank you for being part of The Cozy Cat family!</p>
         </section>
