--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
@@ -20,7 +25,7 @@
     </header>
     <main>
         <section class="story">
-            <img src="Images/Cute Kitty.png" alt="cute cat picture">
+            <img src="Images/CuteKitty.png" alt="cute cat picture">
             <h2>Our Story</h2>
             <p>At The Cozy Cat, we believe in the magic of purrs and warm companionship. Nestled in the heart of Stillwater, MN, our cat café offers a welcoming escape where you can sip your favorite coffee or tea while enjoying the playful charm of our friendly feline residents. Each of our cats is a rescue with a unique story, and we’re proud to partner with local shelters to help them find their forever homes. Whether you're here for a cozy moment or to meet your new best friend, The Cozy Cat is the purr-fect place to relax, connect, and unwind.</p>
         </section>
@@ -28,6 +33,8 @@
             <h2>Location</h2>
             <p>4321 Address Road<br>Stillwater, MN</p>
             <h2>Hours</h2>
+            <p>Mon - Fri        8am - 4pm</p>
+            <p>Sat - Sun        10am - 6pm</p>
         </section>
         <section class="humane">
             <h2>Humane Society</h2>
