--- a/reservations.html
+++ b/reservations.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
@@ -20,7 +25,7 @@
     </header>
     <main>
        <section class="reservations"><h2>Reservations</h2>
-        <img src="Images/Snuggling Kitties.png" alt="Cat image">
+        <img src="Images/SnugglingKitties.png" alt="Cat image">
         <h3>Cat Lounge</h3>
         <p>Book Now</p>
         <p>Reservations</p>
