--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/lqs5trq.css">
     <meta charset="UTF-8">
@@ -19,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <img src="Images/Snuggly Cat.png" alt="cute cat picture">
+        <img src="Images/SnugglyCat.png" alt="cute cat picture">
         <section class="contact"><h2>Contact</h2>
         <p>Phone: 651-651-6516</p>
         <p>Email: cozycat@gmail.com</p>
